--- a/app/src/main/res/layout/view_match_details_first_item_placeholder.xml
+++ b/app/src/main/res/layout/view_match_details_first_item_placeholder.xml
@@ -7,7 +7,7 @@
     android:background="@color/brand">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,13 +20,14 @@
             android:layout_width="53dp"
             android:layout_height="60dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginStart="15dp"
             android:backgroundTint="@color/card_brand"
             android:contentDescription="@null"
             app:cardCornerRadius="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <View
             android:id="@+id/textView"
             android:layout_width="40dp"
             android:layout_height="10dp"
@@ -36,31 +37,20 @@
             app:layout_constraintStart_toStartOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView"
             app:layout_constraintTop_toBottomOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/viewMatchVersusItemPlaceHolderTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:text="@string/matches_versus_label"
-            android:textColor="@color/font_80"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView"
-            app:layout_constraintStart_toEndOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView"
-            app:layout_constraintTop_toTopOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView" />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/viewMatchSecondTeamItemPlaceHolderCardView"
             android:layout_width="53dp"
             android:layout_height="60dp"
             android:layout_marginBottom="4dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
             android:backgroundTint="@color/card_brand"
             android:contentDescription="@null"
             app:cardCornerRadius="16dp"
-            app:layout_constraintStart_toEndOf="@+id/viewMatchVersusItemPlaceHolderTextView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <View
+            android:id="@+id/textView2"
             android:layout_width="40dp"
             android:layout_height="10dp"
             android:layout_marginTop="10dp"
@@ -69,16 +59,23 @@
             app:layout_constraintStart_toStartOf="@+id/viewMatchSecondTeamItemPlaceHolderCardView"
             app:layout_constraintTop_toBottomOf="@+id/viewMatchSecondTeamItemPlaceHolderCardView" />
 
-        <TextView
+        <View
+            android:id="@+id/view"
             android:layout_width="50dp"
             android:layout_height="10dp"
             android:background="@color/card_brand"
-            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintEnd_toStartOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/textView" />
+
+        <View
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:background="@color/card_brand"
             android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/viewMatchSecondTeamItemPlaceHolderCardView"
-            app:layout_constraintStart_toEndOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toEndOf="@+id/viewMatchFirstTeamItemPlaceHolderCardView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
