--- a/app/src/main/res/layout/item_team_player_right.xml
+++ b/app/src/main/res/layout/item_team_player_right.xml
@@ -39,8 +39,8 @@
                 android:id="@+id/itemTeamPlayerRightImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/font_light_grey"
                 android:scaleType="fitXY"
+                android:background="@drawable/ic_players_background"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
 
